force-app/main/default/objects/BrandRelationship__c/fields/PreferredFlavour__c.field-meta.xml
<CustomField>
    <fullName>PreferredFlavour__c</fullName>
    <label>Preferred Flavour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Choco</fullName>
            </value>
            <value>
                <fullName>Honey</fullName>
            </value>
            <value>
                <fullName>Plain</fullName>
            </value>
            <value>
                <fullName>Strawberry</fullName>
            </value>
            <value>
                <fullName>Vanilla</fullName>
            </value>
            <value>
                <fullName>Wheat</fullName>
            </value>
            <value>
                <fullName>Coffee</fullName>
            </value>
            <value>
                <fullName>Almond</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>