force-app/main/default/objects/BrandRelationship__c/fields/PreferredPurchaseChannel__c.field-meta.xml
<CustomField>
    <fullName>PreferredPurchaseChannel__c</fullName>
    <label>Preferred Purchase Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Modern Trade - Supermarket</fullName>
            </value>
            <value>
                <fullName>Modern Trade - Baby Outlet</fullName>
            </value>
            <value>
                <fullName>General Trade - CMH</fullName>
            </value>
            <value>
                <fullName>General Trade - Department Store</fullName>
            </value>
            <value>
                <fullName>General Trade - Grocery/Convenient Store</fullName>
            </value>
            <value>
                <fullName>Ethical - Hospital</fullName>
            </value>
            <value>
                <fullName>Ethical - Pediatric Clinic</fullName>
            </value>
            <value>
                <fullName>Ethical - Pharmacies</fullName>
            </value>
            <value>
                <fullName>Online - E-commerce</fullName>
            </value>
            <value>
                <fullName>Offline - Roadshows/Events</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>