force-app/main/default/objects/BrandRelationship__c/fields/PreviousBrand__c.field-meta.xml
<CustomField>
    <fullName>PreviousBrand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Brand</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2 AND 3 AND ((4 OR 5) OR (6 AND 7))</booleanFilter>
        <filterItems>
            <field>Product2.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Product2.AvailableBrandRelationship__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Product2.AvailableForCurrentAndPreviousBrand__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$User.UserType</field>
            <operation>equals</operation>
            <value>AutomatedProcess</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filterItems>
        <filterItems>
            <field>$User.UserType</field>
            <operation>notEqual</operation>
            <value>AutomatedProcess</value>
        </filterItems>
        <filterItems>
            <field>$User.Market__c</field>
            <operation>contains</operation>
            <valueField>Product2.Market__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Brand Relationships (Previous Brand)</relationshipLabel>
    <relationshipName>PreviousBrands</relationshipName>
    <type>Lookup</type>
</CustomField>