force-app/main/default/objects/BrandRelationship__c/fields/PrimaryContact__c.field-meta.xml
<CustomField>
    <fullName>PrimaryContact__c</fullName>
    <label>Main Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Brand Relationship (Main Contact)</relationshipLabel>
    <relationshipName>MainBrandRelationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>