force-app/main/default/objects/BrandRelationship__c/fields/ProductExperience__c.field-meta.xml
<CustomField>
    <fullName>ProductExperience__c</fullName>
    <label>Product Experience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>