force-app/main/default/objects/BrandRelationship__c/fields/ProductLoyaltyLength__c.field-meta.xml
<CustomField>
    <fullName>ProductLoyaltyLength__c</fullName>
    <label>Product Loyalty Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1 Month</fullName>
            </value>
            <value>
                <fullName>2 Months</fullName>
            </value>
            <value>
                <fullName>3 Months</fullName>
            </value>
            <value>
                <fullName>4 Months</fullName>
            </value>
            <value>
                <fullName>5 Months</fullName>
            </value>
            <value>
                <fullName>6 Months</fullName>
            </value>
            <value>
                <fullName>More than 6 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>