force-app/main/default/objects/BrandRelationship__c/fields/Purchased_Brand__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Brand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Purchased Brand?</label>
    <type>Checkbox</type>
</CustomField>