force-app/main/default/objects/BrandRelationship__c/fields/Reason_for_HCP_s_recommendation__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_HCP_s_recommendation__c</fullName>
    <label>Reason for HCP&apos;s recommendation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>