force-app/main/default/objects/BrandRelationship__c/fields/ReasonstopickanAbbottBrand__c.field-meta.xml
<CustomField>
    <fullName>ReasonstopickanAbbottBrand__c</fullName>
    <label>Reasons to pick an Abbott Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AZ-親友介紹</fullName>
            </value>
            <value>
                <fullName>BZ-沿用上胎</fullName>
            </value>
            <value>
                <fullName>CZ-醫院輪用</fullName>
            </value>
            <value>
                <fullName>DZ-醫護介紹</fullName>
            </value>
            <value>
                <fullName>EZ-藥局介紹</fullName>
            </value>
            <value>
                <fullName>FZ-網路資料</fullName>
            </value>
            <value>
                <fullName>GZ-月子中心介紹</fullName>
            </value>
            <value>
                <fullName>IZ-藥商介紹(或有試用罐)</fullName>
            </value>
            <value>
                <fullName>JZ-腸絞痛</fullName>
            </value>
            <value>
                <fullName>KZ-過敏體質</fullName>
            </value>
            <value>
                <fullName>LZ-早產兒或低體重兒</fullName>
            </value>
            <value>
                <fullName>MZ-價格考量</fullName>
            </value>
            <value>
                <fullName>NZ-DHA含量</fullName>
            </value>
            <value>
                <fullName>OZ-不含棕櫚油</fullName>
            </value>
            <value>
                <fullName>ZZ-其他原因(需有備註欄 )</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>