force-app/main/default/objects/BrandRelationship__c/fields/RouteOfFeeding__c.field-meta.xml
<CustomField>
    <fullName>RouteOfFeeding__c</fullName>
    <label>Route of Feeding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NGT</fullName>
            </value>
            <value>
                <fullName>Oral</fullName>
            </value>
            <value>
                <fullName>PEG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>