force-app/main/default/objects/BrandRelationship__c/fields/Sample_Influence__c.field-meta.xml
<CustomField>
    <fullName>Sample_Influence__c</fullName>
    <label>Sample Influence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>