force-app/main/default/objects/BrandRelationship__c/fields/Sample_provided_in_Clinic__c.field-meta.xml
<CustomField>
    <fullName>Sample_provided_in_Clinic__c</fullName>
    <label>Sample provided in Clinic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>