force-app/main/default/objects/BrandRelationship__c/fields/ScoopsPerServing__c.field-meta.xml
<CustomField>
    <fullName>ScoopsPerServing__c</fullName>
    <label>Scoops per serving</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>