force-app/main/default/objects/BrandRelationship__c/fields/ServingSchedule__c.field-meta.xml
<CustomField>
    <fullName>ServingSchedule__c</fullName>
    <label>Serving Schedule</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Am Snack</fullName>
            </value>
            <value>
                <fullName>PM Snack</fullName>
            </value>
            <value>
                <fullName>Bedtime Snack</fullName>
            </value>
            <value>
                <fullName>Breakfast</fullName>
            </value>
            <value>
                <fullName>Lunch</fullName>
            </value>
            <value>
                <fullName>Dinner</fullName>
            </value>
            <value>
                <fullName>Every 4 Hours</fullName>
            </value>
            <value>
                <fullName>Every 6 Hours</fullName>
            </value>
            <value>
                <fullName>Breakfast and Bedtime Snack</fullName>
            </value>
            <value>
                <fullName>Breakfast&amp; Lunch&amp; Dinner</fullName>
            </value>
            <value>
                <fullName>Breakfast Only</fullName>
            </value>
            <value>
                <fullName>Bedtime Snack Only</fullName>
            </value>
            <value>
                <fullName>Breakfast and Dinner</fullName>
            </value>
            <value>
                <fullName>AM Snack and Bedtime Snack</fullName>
            </value>
            <value>
                <fullName>AM Snack Only</fullName>
            </value>
            <value>
                <fullName>Breakfast and PM Snack</fullName>
            </value>
            <value>
                <fullName>AM Snack and PM Snack</fullName>
            </value>
            <value>
                <fullName>Dinner and Bedtime Snack</fullName>
            </value>
            <value>
                <fullName>AM Snack and Dinner</fullName>
            </value>
            <value>
                <fullName>Dinner Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>