force-app/main/default/objects/BrandRelationship__c/fields/Servingsperday__c.field-meta.xml
<CustomField>
    <fullName>Servingsperday__c</fullName>
    <label>Servings per day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>