force-app/main/default/objects/BrandRelationship__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SKU (usual SKU bought)</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2 AND ((3 OR 4) OR (5 AND 6))) OR 7</booleanFilter>
        <filterItems>
            <field>Product2.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Product2.ProductHierarchyLevel__c</field>
            <operation>equals</operation>
            <value>Product</value>
        </filterItems>
        <filterItems>
            <field>$User.UserType</field>
            <operation>equals</operation>
            <value>AutomatedProcess</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filterItems>
        <filterItems>
            <field>$User.UserType</field>
            <operation>notEqual</operation>
            <value>AutomatedProcess</value>
        </filterItems>
        <filterItems>
            <field>$User.Market__c</field>
            <operation>contains</operation>
            <valueField>Product2.Market__c</valueField>
        </filterItems>
        <filterItems>
            <field>$User.Bypass_Lookup_Filter__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Brand Relationships (SKU (usual SKU bought))</relationshipLabel>
    <relationshipName>SKUs</relationshipName>
    <type>Lookup</type>
</CustomField>