force-app/main/default/objects/BrandRelationship__c/fields/SourceServingSchedule__c.field-meta.xml
<CustomField>
    <fullName>SourceServingSchedule__c</fullName>
    <label>SourceServingSchedule</label>
    <length>72</length>
    <type>Text</type>
</CustomField>