force-app/main/default/objects/BrandRelationship__c/fields/StatusTypeUpdatedDate__c.field-meta.xml
<CustomField>
    <fullName>StatusTypeUpdatedDate__c</fullName>
    <label>Status &amp; Type Updated Date</label>
    <type>Date</type>
</CustomField>