force-app/main/default/objects/BrandRelationship__c/fields/SubmitConversionInteractiveQuiz__c.field-meta.xml
<CustomField>
    <fullName>SubmitConversionInteractiveQuiz__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit Conversion Interactive Quiz?</label>
    <type>Checkbox</type>
</CustomField>