force-app/main/default/objects/BrandRelationship__c/fields/Survey_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Survey_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Campaign</label>
    <referenceTo>SurveyCampaign__c</referenceTo>
    <relationshipLabel>Brand Relationships</relationshipLabel>
    <relationshipName>Brand_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>