force-app/main/default/objects/BrandRelationship__c/fields/Total_Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Lead_Score__c</fullName>
    <description>Total Lead Score for this Brand Relationship</description>
    <label>Total Lead Score</label>
    <summarizedField>Lead_Scoring__c.Score__c</summarizedField>
    <summaryForeignKey>Lead_Scoring__c.Brand_Relationship__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>