force-app/main/default/objects/BrandRelationship__c/fields/TotalLeadScore__c.field-meta.xml
<CustomField>
    <fullName>TotalLeadScore__c</fullName>
    <description>Total of all scored objects</description>
    <formula>LeadScoreAdultContactObj__c + LeadScoreChildContactObj__c  +   LeadScoreBRObj__c + LeadScoreCRObj__c  +  LeadScoreNutritionObj__c  +  LeadScoreMembershipObj__c + LeadScoreAddressObj__c + LeadScoreEDMObj__c  + LeadScoreCaseObj__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Lead Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>