force-app/main/default/objects/BrandRelationship__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>End User</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Household__c</field>
            <operation>equals</operation>
            <valueField>Contact.Account.Id</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Brand Relationship (End User)</relationshipLabel>
    <relationshipName>BrandRelationships</relationshipName>
    <type>Lookup</type>
</CustomField>