force-app/main/default/objects/BrandRelationship__c/fields/What_HCP_Shared__c.field-meta.xml
<CustomField>
    <fullName>What_HCP_Shared__c</fullName>
    <label>What HCP Shared</label>
    <length>255</length>
    <type>Text</type>
</CustomField>