force-app/main/default/objects/BrandRelationship__c/fields/WinBack__c.field-meta.xml
<CustomField>
    <fullName>WinBack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Win Back</label>
    <type>Checkbox</type>
</CustomField>