force-app/main/default/objects/BrandRelationship__c/fields/WinBackDate__c.field-meta.xml
<CustomField>
    <fullName>WinBackDate__c</fullName>
    <label>Win Back Date</label>
    <type>Date</type>
</CustomField>