force-app/main/default/objects/BrandRelationship__c/validationRules/BR_Status_Should_be_Equal_to_Lapsed.validationRule-meta.xml
<ValidationRule>
    <fullName>BR_Status_Should_be_Equal_to_Lapsed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(CurrentBrand__r.CompetitorProduct__c,
ISPICKVAL(Type__c, &apos;User&apos;),
OR(ISPICKVAL(Status__c, &apos;New&apos;),
ISPICKVAL(Status__c, &apos;Existing&apos;) 
),
To_be_archived__c = false,
$User.Bypass_Lookup_Filter__c = false

)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Brand Relationship status must not be New or Existing if Current Brand is a competitor product.</errorMessage>
</ValidationRule>