force-app/main/default/objects/BrandRelationship__c/validationRules/Drop_Out_Date_Selection.validationRule-meta.xml
<ValidationRule>
    <fullName>Drop_Out_Date_Selection</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
 ISNEW(),
 ISCHANGED(DropOutDate__c)
),
DropOutDate__c &gt;  TODAY()
)</errorConditionFormula>
    <errorDisplayField>DropOutDate__c</errorDisplayField>
    <errorMessage>Please select date equal to or less than today.</errorMessage>
</ValidationRule>