force-app/main/default/objects/BrandRelationship__c/validationRules/Win_Back_Date_Selection.validationRule-meta.xml
<ValidationRule>
    <fullName>Win_Back_Date_Selection</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
 ISNEW(),
 ISCHANGED(WinBackDate__c)
),
WinBackDate__c &gt;  TODAY()
)</errorConditionFormula>
    <errorDisplayField>WinBackDate__c</errorDisplayField>
    <errorMessage>Please select date equal to or less than today.</errorMessage>
</ValidationRule>